# CCProxy

./: .dockerignore  .env.deepseek  .env.example  .env.openai  .env.openrouter  .gitignore  CLAUDE.md  Dockerfile  HTTP_OPTIMIZATION.md  README.md  RUN_INSTRUCTIONS.md  ccproxy.service  docker-compose-run.sh  docker-compose.yml  errors_detailed.jsonl  fix_commented_parens_backup.py  fix_remaining_errors.py  gunicorn.conf.py  locustfile.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-ccproxy.sh  run-tests.sh  setup.py  start-lint.sh  supervisor.conf  test.py  test_errors.jsonl  wsgi.py
benchmarks/: CLAUDE.md  README.md  __init__.py  bench_dict_ops.py  bench_e2e_pipeline.py  bench_json_ops.py  bench_lru_ops.py  bench_stream_state.py  bench_tokenizer.py  bench_type_checks.py  bench_validation.py
ccproxy/: CLAUDE.md  config.py  constants.py  enums.py  logging.py  monitoring.py  tracing.py
ccproxy/_cython/: CLAUDE.md  __init__.py  cache_keys.pyx  dict_ops.pyx  json_ops.pyx  lru_ops.pyx  serialization.pyx  stream_state.pyx  string_ops.pyx  type_checks.pyx  validation.pyx
ccproxy/application/: CLAUDE.md  converters.py  error_tracker.py  model_selection.py  request_validator.py  response_cache.py  thread_pool.py  tokenizer.py  type_utils.py
ccproxy/application/cache/: CLAUDE.md  __init__.py  circuit_breaker.py  memory_manager.py  models.py  response_cache.py  statistics.py  stream_deduplication.py  warmup.py
ccproxy/application/converters_module/: CLAUDE.md  __init__.py  anthropic_to_openai.py  async_converter.py  base.py  content_converter.py  main.py  openai_to_anthropic.py  tool_converter.py
ccproxy/domain/: CLAUDE.md  exceptions.py  models.py
ccproxy/infrastructure/: CLAUDE.md
ccproxy/infrastructure/providers/: CLAUDE.md  base.py  http_client_factory.py  metrics.py  openai_provider.py  provider_components_factory.py  rate_limiter.py  request_lifecycle_observer.py  request_logger.py  request_pipeline.py  resilience.py  response_handlers.py
ccproxy/interfaces/: CLAUDE.md
ccproxy/interfaces/http/: CLAUDE.md  app.py  errors.py  guardrails.py  http_status.py  middleware.py  streaming.py  upstream_limits.py
ccproxy/interfaces/http/routes/: CLAUDE.md  health.py  messages.py  monitoring.py
scripts/: test-cython-build.sh  verify-cython-status.sh
tests/: CLAUDE.md  conftest.py  load_test_tokenizer.py  test_async_converters.py  test_benchmarks.py  test_cache.py  test_cache_warmup.py  test_circuit_breaker.py  test_converters.py  test_error_tracker.py  test_errors.py  test_exceptions.py  test_guardrails.py  test_health_monitoring_routes.py  test_integration.py  test_json_error_handling.py  test_middleware.py  test_model_selection.py  test_openai_provider.py  test_openai_provider_monitoring.py  test_provider_components_factory.py  test_rate_limiter.py  test_request_lifecycle_observer.py  test_request_pipeline.py  test_request_validator.py  test_routes.py  test_streaming.py  test_thread_pool.py  test_tokenizer.py  test_type_utils.py  test_upstream_limits.py  test_utf8.py
