[project]
name = "CCProxy"
version = "1.1.2"
description = "Proxy server enabling Claude Code to work with OpenAI and its compatible API providers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Kenny Dizi", email = "chitrung09t2@gmail.com"}
]
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
    "gunicorn==23.0.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "openai>=1.107.2",
    "pydantic-settings>=2.10.1",
    "tiktoken>=0.11.0",
    "yarl==1.20.1",
    "typing-extensions>=4.15.0",
    "starlette>=0.47.3",
    "standard>=1.0.3",
]

[project.optional-dependencies]
aiohttp = [
    "aiohttp>=3.12.15",
    "aiodns>=3.5.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "ccproxy"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-sugar>=1.1.1",
    "respx>=0.22.0",
    "ruff>=0.13.0",
    "mypy>=1.18.1",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = ["ccproxy"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = false
# Disable noisy error codes until gradual typing completed
disable_error_code = [
    "no-untyped-def",
    "attr-defined",
    "misc",
    "type-arg",
    "assignment",
    "union-attr",
    "arg-type",
    "dict-item",
    "redundant-cast",
]
plugins = ['pydantic.mypy']
