[build-system]
requires = ["setuptools>=80.9.0", "wheel", "cython>=3.1.6"]
build-backend = "setuptools.build_meta"

[project]
name = "CCProxy"
version = "1.4.5"
description = "Proxy server enabling Claude Code to work with OpenAI and its compatible API providers"
readme = "README.md"
requires-python = ">=3.14.0"
authors = [
    {name = "CCWorkforce Engineers"}
]
dependencies = [
    "fastapi[standard]>=0.120.3",
    "uvicorn>=0.38.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "openai[aiohttp]>=2.6.1",
    "httpx-aiohttp>=0.1.9",
    "pydantic-settings>=2.11.0",
    "tiktoken>=0.12.0",
    "yarl>=1.22.0",
    "starlette>=0.49.1",
    "standard>=1.0.3",
    "asyncer>=0.0.10",
    "anyio>=4.11.0",
    "psutil>=7.1.2",
    "orjson>=3.11.4",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",
    "typer>=0.20.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvloop>=0.22.1",
    "httptools>=0.7.1",
    "locust==2.42.1"
]

[project.optional-dependencies]
aiohttp = [
    "aiohttp>=3.13.2",
    "aiodns>=3.5.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "ccproxy"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-benchmark>=5.2.0",
    "aiofiles>=25.1.0",
    "respx>=0.22.0",
    "ruff>=0.14.3",
    "mypy>=1.18.2",
    "cython>=3.1.6",
    "line-profiler>=5.0.0",
    "setuptools>=80.9.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = ["ccproxy"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true

# Stricter type checking enabled
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true

# Still disable some error codes during transition
disable_error_code = [
    "misc",  # Keep misc disabled for now
]

plugins = ['pydantic.mypy']

# Per-module options for gradual typing
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ccproxy.application.cache.*"
disallow_untyped_defs = false  # Gradually enable

[[tool.mypy.overrides]]
module = "ccproxy.application.converters_module.*"
disallow_untyped_defs = false  # Gradually enable
